--- a/src/sem2.html
+++ b/src/sem2.html
@@ -84,13 +84,41 @@
         background-color: rgba(255, 1, 1, 0.651);
         color: white;
       }
+
+      #navbar {
+        background-color: #333;
+        overflow: hidden;
+      }
+
+      #navbar a {
+        float: left;
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      #navbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
     </style>
   </head>
 
   <body>
+    <div id="navbar">
+      <a href="index.html">Home</a>
+      <a href="sem1.html">Sem1</a>
+      <a href="sem2.html">Sem2</a>
+      <a href="sem3.html">Sem3</a>
+      <a href="sem4.html">Sem4</a>
+      <a href="sgpa.html">SGPA</a>
+    </div>
+
     <div class="container">
       <div class="center">
-        <h2 class="text-center">1st SEM SGPA Calculator</h2>
+        <h2 class="text-center">2nd SEM SGPA Calculator</h2>
       </div>
       <br />
 
@@ -118,8 +146,22 @@
         </div>
       </div>
 
+      <div class="additional-details">
+        <p id="additionaldetails"></p>
+        <p id="cgpaDisplay"></p>
+        <p id="percentageDisplay"></p>
+        <p id="total1Display"></p>
+        <p id="totalMarksDisplay"></p>
+      </div>
+
       <script>
         let resultElement = document.querySelector(".result");
+        let additionaldetails = document.getElementById("additionaldetails");
+        let cgpaDisplay = document.getElementById("cgpaDisplay");
+        let percentageDisplay = document.getElementById("percentageDisplay");
+        let total1Display = document.getElementById("total1Display");
+        let totalMarksDisplay = document.getElementById("totalMarksDisplay");
+
         let currentExpression = "";
 
         function addToResult(value) {
@@ -149,85 +191,94 @@
       <form>
         <div class="form-row">
           <div class="col-md-6 mb-3">
-            <label for="input1">Data Structures with Algorithms</label> <br />
+            <label for="input1">Database Management System</label> <br />
             <input
               type="number"
               class="form-control"
               id="input1"
-              placeholder="DSA"
+              placeholder="DBMS"
               required
             />
           </div>
           <div class="col-md-6 mb-3">
-            <label for="input2">Operating System with Unix</label><br />
+            <label for="input2">Object Oriented Programming with Java</label
+            ><br />
             <input
               type="number"
               class="form-control"
               id="input2"
-              placeholder="OS/Unix"
+              placeholder="OOP Java"
               required
             />
           </div>
           <div class="col-md-6 mb-3">
-            <label for="input3">Computer Networks</label><br />
+            <label for="input3">Web Technologies</label><br />
             <input
               type="number"
               class="form-control"
               id="input3"
-              placeholder="CN"
+              placeholder="Web Tech"
               required
             />
           </div>
           <div class="col-md-6 mb-3">
-            <label for="input4"
-              >Mathematical Foundation for Computer Applications</label
-            ><br />
+            <label for="input4">Software Engineering</label><br />
             <input
               type="number"
               class="form-control"
               id="input4"
-              placeholder="Math Foundation"
+              placeholder="SE"
               required
             />
           </div>
           <div class="col-md-6 mb-3">
-            <label for="input5">Research Methodology & IPR</label><br />
+            <label for="input5">Elective-1</label><br />
             <input
               type="number"
               class="form-control"
               id="input5"
-              placeholder="Research Methodology"
+              placeholder="Elective-1"
               required
             />
           </div>
           <div class="col-md-6 mb-3">
-            <label for="input6">Data Structures with Algorithms Lab</label
-            ><br />
+            <label for="input6">Elective-2</label><br />
             <input
               type="number"
               class="form-control"
               id="input6"
-              placeholder="DSA Lab"
+              placeholder="Elective-2"
               required
             />
           </div>
           <div class="col-md-6 mb-3">
-            <label for="input7">Unix Programming Lab</label><br />
+            <label for="input7">BMS Lab</label><br />
             <input
               type="number"
               class="form-control"
               id="input7"
-              placeholder="Unix Lab"
+              placeholder="BMS Lab"
               required
             />
           </div>
           <div class="col-md-6 mb-3">
-            <label for="input8">Computer Networks Lab</label><br />
+            <label for="input8">Java Programming Lab</label><br />
             <input
               type="number"
               class="form-control"
               id="input8"
-              placeholder="CN Lab"
+              placeholder="Java Lab"
+              required
+            />
+          </div>
+          <div class="col-md-6 mb-3">
+            <label for="input9">Web Technologies Lab with Mini-project</label
+            ><br />
+            <input
+              type="number"
+              class="form-control"
+              id="input9"
+              placeholder="Web Tech Lab"
               required
             />
           </div>
@@ -246,10 +297,41 @@
         </div>
       </form>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <!-- Include Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
+      function redirectToHomePage() {
+        window.location.href = "index.html";
+      }
+
+      function redirectToSem1() {
+        window.location.href = "sem1.html";
+      }
+
+      function redirectToSem2() {
+        window.location.href = "sem2.html";
+      }
+
+      function redirectToSem3() {
+        window.location.href = "sem3.html";
+      }
+
+      function redirectToSem4() {
+        window.location.href = "sem4.html";
+      }
+
+      function redirectToSGPA() {
+        window.location.href = "sgpa.html";
+      }
+
       function calculateAndDisplay() {
         // Get the values from the input fields
         var input1 = parseFloat(document.getElementById("input1").value) || 0;
@@ -260,6 +342,7 @@
         var input6 = parseFloat(document.getElementById("input6").value) || 0;
         var input7 = parseFloat(document.getElementById("input7").value) || 0;
         var input8 = parseFloat(document.getElementById("input8").value) || 0;
+        var input9 = parseFloat(document.getElementById("input9").value) || 0;
 
         function calculateGradePoints(mark) {
           if (mark >= 90) {
@@ -287,7 +370,8 @@
           input5 != " " &&
           input6 != " " &&
           input7 != " " &&
-          input8 != " "
+          input8 != " " &&
+          input9 != " "
         ) {
           if (
             input1 > 100 ||
@@ -297,7 +381,8 @@
             input5 > 100 ||
             input6 > 100 ||
             input7 > 100 ||
-            input8 > 100
+            input8 > 100 ||
+            input9 > 100
           ) {
             document.getElementById("result").textContent =
               "please enter the marks < 100";
@@ -306,19 +391,44 @@
             location.reload();
           } else {
             var total1 =
-              calculateGradePoints(input1) * 4 +
-              calculateGradePoints(input2) * 4 +
+              calculateGradePoints(input1) * 3 +
+              calculateGradePoints(input2) * 3 +
               calculateGradePoints(input3) * 4 +
               calculateGradePoints(input4) * 4 +
-              calculateGradePoints(input5) * 2 +
-              calculateGradePoints(input6) * 2 +
+              calculateGradePoints(input5) * 3 +
+              calculateGradePoints(input6) * 3 +
               calculateGradePoints(input7) * 2 +
-              calculateGradePoints(input8) * 2;
-            var cgpabda = total1 / 24;
+              calculateGradePoints(input8) * 2 +
+              calculateGradePoints(input9) * 2;
+            var cgpabda = total1 / 26;
 
             cgpa = cgpabda.toFixed(3);
             document.getElementById("result").textContent = "SGPA: " + cgpa;
             window.scrollTo(0, 0);
+
+            var totalMarks =
+              input1 +
+              input2 +
+              input3 +
+              input4 +
+              input5 +
+              input6 +
+              input7 +
+              input8 +
+              input9;
+            var totalSubjects = 9; // Assuming there are 8 subjects
+
+            // Calculate and display percentage
+            var percentage = (totalMarks / (totalSubjects * 100)) * 100;
+            document.getElementById("result").textContent +=
+              " Percentage: " + percentage.toFixed(2) + "%";
+
+            // Display additional details
+            additionaldetails.textContent = "Additional Details";
+            cgpaDisplay.textContent = "CGPA: " + cgpa;
+            percentageDisplay.textContent = "Percentage: " + percentage + "%";
+            total1Display.textContent = "Toatal Credits: " + total1;
+            totalMarksDisplay.textContent = "Total Marks: " + totalMarks;
           }
         } else {
           document.getElementById("result").textContent =
