--- a/src/sem4.html
+++ b/src/sem4.html
@@ -84,10 +84,38 @@
         background-color: rgba(255, 1, 1, 0.651);
         color: white;
       }
+
+      #navbar {
+        background-color: #333;
+        overflow: hidden;
+      }
+
+      #navbar a {
+        float: left;
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      #navbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
     </style>
   </head>
 
   <body>
+    <div id="navbar">
+      <a href="index.html">Home</a>
+      <a href="sem1.html">Sem1</a>
+      <a href="sem2.html">Sem2</a>
+      <a href="sem3.html">Sem3</a>
+      <a href="sem4.html">Sem4</a>
+      <a href="sgpa.html">SGPA</a>
+    </div>
+
     <div class="container">
       <div class="center">
         <h2 class="text-center">4th SEM SGPA Calculator</h2>
@@ -118,8 +146,22 @@
         </div>
       </div>
 
+      <div class="additional-details">
+        <p id="additionaldetails"></p>
+        <p id="cgpaDisplay"></p>
+        <p id="percentageDisplay"></p>
+        <p id="total1Display"></p>
+        <p id="totalMarksDisplay"></p>
+      </div>
+
       <script>
         let resultElement = document.querySelector(".result");
+        let additionaldetails = document.getElementById("additionaldetails");
+        let cgpaDisplay = document.getElementById("cgpaDisplay");
+        let percentageDisplay = document.getElementById("percentageDisplay");
+        let total1Display = document.getElementById("total1Display");
+        let totalMarksDisplay = document.getElementById("totalMarksDisplay");
+
         let currentExpression = "";
 
         function addToResult(value) {
@@ -203,10 +245,40 @@
         </div>
       </form>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <!-- Include Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
+      function redirectToHomePage() {
+        window.location.href = "index.html";
+      }
+
+      function redirectToSem1() {
+        window.location.href = "sem1.html";
+      }
+
+      function redirectToSem2() {
+        window.location.href = "sem2.html";
+      }
+
+      function redirectToSem3() {
+        window.location.href = "sem3.html";
+      }
+
+      function redirectToSem4() {
+        window.location.href = "sem4.html";
+      }
+
+      function redirectToSGPA() {
+        window.location.href = "sgpa.html";
+      }
       function calculateAndDisplay() {
         // Get the values from the input fields
         var input1 = parseFloat(document.getElementById("input1").value) || 0;
@@ -250,6 +322,21 @@
             cgpa = cgpabda.toFixed(3);
             document.getElementById("result").textContent = "SGPA: " + cgpa;
             window.scrollTo(0, 0);
+
+            var totalMarks = input1 + input2 + input3 + input4;
+            var totalSubjects = 4; // Assuming there are 8 subjects
+
+            // Calculate and display percentage
+            var percentage = (totalMarks / (totalSubjects * 100)) * 100;
+            document.getElementById("result").textContent +=
+              " Percentage: " + percentage.toFixed(2) + "%";
+
+            // Display additional details
+            additionaldetails.textContent = "Additional Details";
+            cgpaDisplay.textContent = "CGPA: " + cgpa;
+            percentageDisplay.textContent = "Percentage: " + percentage + "%";
+            total1Display.textContent = "Toatal Credits: " + total1;
+            totalMarksDisplay.textContent = "Total Marks: " + totalMarks;
           }
         } else {
           document.getElementById("result").textContent =
