--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       <a href="sem2.html">Semester 2</a>
       <a href="sem3.html">Semester 3</a>
       <a href="sem4.html">Semester 4</a>
-      <a href="SGPA.html">SGPA</a>
+      <a href="SGPA.html">CGPA</a>
     </div>
 
     <script>
