--- a/src/sem1.html
+++ b/src/sem1.html
@@ -113,12 +113,12 @@
       <a href="sem2.html">Sem2</a>
       <a href="sem3.html">Sem3</a>
       <a href="sem4.html">Sem4</a>
-      <a href="sgpa.html">SGPA</a>
+      <a href="sgpa.html">CGPA</a>
     </div>
 
     <div class="container">
       <div class="center">
-        <h2 class="text-center">1st SEM SGPA Calculator</h2>
+        <h2 class="text-center">1st SEM CGPA Calculator</h2>
       </div>
       <br />
 
@@ -411,7 +411,7 @@
             additionaldetails.textContent = "Additional Details";
             cgpaDisplay.textContent = "CGPA: " + cgpa;
             percentageDisplay.textContent = "Percentage: " + percentage + "%";
-            total1Display.textContent = "Toatal Credits: " + total1;
+            total1Display.textContent = "total Credits: " + total1;
             totalMarksDisplay.textContent = "Total Marks: " + totalMarks;
           }
         } else {
