--- a/src/sem3.html
+++ b/src/sem3.html
@@ -110,7 +110,7 @@
       <a href="sem2.html">Sem2</a>
       <a href="sem3.html">Sem3</a>
       <a href="sem4.html">Sem4</a>
-      <a href="sgpa.html">SGPA</a>
+      <a href="sgpa.html">CGPA</a>
     </div>
 
     <div class="container">
@@ -416,7 +416,7 @@
             var cgpabda = total1 / 24;
 
             cgpa = cgpabda.toFixed(3);
-            document.getElementById("result").textContent = "SGPA: " + cgpa;
+            document.getElementById("result").textContent = "CGPA: " + cgpa;
             window.scrollTo(0, 0);
 
             var totalMarks =
@@ -439,7 +439,7 @@
             additionaldetails.textContent = "Additional Details";
             cgpaDisplay.textContent = "CGPA: " + cgpa;
             percentageDisplay.textContent = "Percentage: " + percentage + "%";
-            total1Display.textContent = "Toatal Credits: " + total1;
+            total1Display.textContent = "total Credits: " + total1;
             totalMarksDisplay.textContent = "Total Marks: " + totalMarks;
           }
         } else {
