--- a/src/sem4.html
+++ b/src/sem4.html
@@ -113,7 +113,7 @@
       <a href="sem2.html">Sem2</a>
       <a href="sem3.html">Sem3</a>
       <a href="sem4.html">Sem4</a>
-      <a href="sgpa.html">SGPA</a>
+      <a href="sgpa.html">CGPA</a>
     </div>
 
     <div class="container">
@@ -320,7 +320,7 @@
             var cgpabda = total1 / 26;
 
             cgpa = cgpabda.toFixed(3);
-            document.getElementById("result").textContent = "SGPA: " + cgpa;
+            document.getElementById("result").textContent = "CGPA: " + cgpa;
             window.scrollTo(0, 0);
 
             var totalMarks = input1 + input2 + input3 + input4;
@@ -335,7 +335,7 @@
             additionaldetails.textContent = "Additional Details";
             cgpaDisplay.textContent = "CGPA: " + cgpa;
             percentageDisplay.textContent = "Percentage: " + percentage + "%";
-            total1Display.textContent = "Toatal Credits: " + total1;
+            total1Display.textContent = "total Credits: " + total1;
             totalMarksDisplay.textContent = "Total Marks: " + totalMarks;
           }
         } else {
